--- a/todoapp/css/style.css
+++ b/todoapp/css/style.css
@@ -23,7 +23,7 @@ header {
   left: 0;
   z-index: 5;
 
-  background: #333;
+  background: #24292e;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
 }
 
@@ -95,7 +95,7 @@ header button svg {
 }
 
 header button svg .fill {
-  fill: red;
+  fill: #af3d51;
 }
 
 .container {
